fix: rewrite the panels and fields with new UI components (#70) (#87)
- Used new `JBCheckBox`, `JBIntSpinner`, and `JBTextField` for value fields
- Used `FormBuilder` for layout management
- Moved non-UI-related `getRuleClassInstance` from the UI Helper to the code generator